deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloud-bot-kde-v5
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cloud-bot-kde-v5
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: cloud-bot-kde-v5
    spec:
      containers:
      - name: cloud-bot-kde-v5
        image: gcr.io/PROJECT_ID/IMAGE:TAG
        ports:
        - containerPort: 8443
          protocol: TCP
        resources:
          requests:
            cpu: 100m
          limits:
            cpu: 100m
