mc-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mc-service
spec:
  selector:
    app: cloud-bot-kde-v4
  type: NodePort
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8443
