service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloud-bot-kde-v3
spec:
  selector:
    app: cloud-bot-kde-v3
  type: LoadBalancer
  ports:
    - port: 8080
      targetPort: 8443
